Atualizando template para o inglês

--- a/templates/portifolio-item.html
+++ b/templates/portifolio-item.html
@@ -1,7 +1,10 @@
 <div class="portifolio-item">
-    <img src="{{imagem}}">
+    <img src="{{image}}">
     <div class="details">
-        <h2>{{titulo}}</h2>
-        <p>{{descricao}}</p>
+        <h2>{{title}}</h2>
+        <p>{{description}}</p>
     </div>
+    <a href="" class="acesso">
+
+    </a>
 </div>
