Aprimoramento visual do template de item do portifólio

--- a/templates/portifolio-item.html
+++ b/templates/portifolio-item.html
@@ -4,7 +4,7 @@
         <h2>{{title}}</h2>
         <p>{{description}}</p>
         <a href="{{url}}" class="access">
-            Acessar
+            > Acessar
         </a>
     </div>
 </div>
