Ajuste de aparência

--- a/css/connections.css
+++ b/css/connections.css
@@ -1,6 +1,8 @@
 main {
     width: 100%;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .connections {
