--- a/css/connections.css
+++ b/css/connections.css
@@ -7,16 +7,14 @@ main {
 
 .connections {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     margin-top: 1rem;
     width: 100%;
-    grid-auto-flow: row;
 }
 
 .connections-item {
     display: flex;
-    flex-direction: column;
     gap: 1.5rem;
     justify-content: center;
     align-items: center;
@@ -25,17 +23,18 @@ main {
 
 .connections-item img {
     width: 100%;
+    max-width: 180px;
     height: auto;
     object-fit: contain;
     border: 2px solid white;
     padding: 1rem;
+    flex-shrink: 0;
 }
 
 .connections-item .details {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    min-width: 0;
     word-break: break-word;
 }
 
@@ -55,13 +54,14 @@ main {
 }
 
 @media (min-width: 900px) {
-    .connections-item {
-        flex-direction: row;
-        text-align: left;
-    }
-
     .connections-item img {
         max-width: 180px;
         flex-shrink: 0;
+    }
+}
+
+@media (max-width: 440px) {
+    .connections-item {
+        flex-direction: column;
     }
 }
