--- a/templates/portifolio-item.html
+++ b/templates/portifolio-item.html
@@ -3,7 +3,7 @@
     <div class="details">
         <h2>{{title}}</h2>
         <p>{{description}}</p>
-        <a href="{{url}}" class="access">
+        <a target="_blank" href="{{url}}" class="access">
             > Acessar
         </a>
     </div>
